# Diploma

./: CMakeLists.txt  RM2_5
Polar/: TalVardyListDecoder.cpp  TalVardyListDecoder.h  encode.cpp  polar_encoder.h
Polar/results/: Polar(1024, 512, 1)  Polar(1024, 512, 16)  Polar(1024, 512, 2)  Polar(1024, 512, 4)  Polar(1024, 512, 8)
RMLD/: RMLD.cpp
RMLD/Results/: RM1_3  RM2_5  RM2_6  RM3_6  RM4_6
RMLD/Results/Polar(256, 128)/: ORMLD
RMLD/Results/Polar(512, 256)/: SC
common/: common.h
extra/: check.cpp
viterbi/: reed_muller.h  viterbi.cpp
